--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^19.1.1",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.30.1",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
